Removed include_address flag from getProfiles.
Fixed bug where if address was included, it would not show all addresses associated with the profile.
