# packages/common-common/src/api/extApiTypes.ts
@@ -93,7 +93,6 @@ export type GetCommunitiesResp = {
 export type GetProfilesReq = {
   addresses?: string[];
   profile_ids?: number[];
-  include_addresses?: boolean;
   count_only?: boolean;
 } & IPagination;
 
